# MIDIMaster

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: PLUGIN_DEVELOPER_GUIDE.md  README.md  STORE_SUBMISSION_GUIDE.md  USER_GUIDE.md
plugin-example/demo/: manifest.json  plugin.mjs
plugin-example/template/: README.md  manifest.json  plugin.mjs
src/: index.html  main.js  plugin_host.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/builtin_plugins/obs/: manifest.json  plugin.mjs
src-tauri/builtin_plugins/wavelink/: manifest.json  plugin.mjs
src-tauri/capabilities/: default.json
src-tauri/src/: app_paths.rs  app_settings.rs  bindings.rs  main.rs  midi.rs  model.rs  plugin_api.rs  profile_store.rs  store_api.rs  windows_autostart.rs  windows_display.rs  ws_bridge.rs
src-tauri/src/audio/: mod.rs  unsupported.rs  windows.rs
src-tauri/src/commands/: audio.rs  bindings.rs  midi.rs  mod.rs  profiles.rs  settings.rs
src/core/: target_core.js
src/features/bindings/: bindings.js
src/features/midi/: midi.js
src/features/osd/: osd.js
src/features/plugins/: tabs.js
src/features/profiles/: profiles.js
src/features/settings/: settings.js
src/features/targets/: targets.js
