[package]
name = "midimaster"
version = "0.1.0"
edition = "2021"
default-run = "midimaster"
license = "MIT"
repository = "https://github.com/prgmitchell/MIDIMaster"
description = "Bind MIDI controls to system audio, devices, and plugin integrations"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-window-state = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["time", "macros", "sync"] }
midir = "0.9"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
windows = { version = "0.61", features = [
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Threading",
  "Win32_System_Registry",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse"
] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
